# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-04-07 18:55:26 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-59

    Summary:
      xhtml, fix translate
    Revision:
      itools--main--0.8--patch-59


    modified files:
     Changelog xhtml/XHTML.py


2005-04-07 18:54:59 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-58

    Summary:
      xml, fix deserialization for non UTF-8 documents
    Revision:
      itools--main--0.8--patch-58

    When the expat parser is configured to return byte strings, it does
    return them always in the UTF-8 encoding, regardless of the encoding
    specified in the source.
    
    This is not what I would expect (nor what I would like, for performance
    reasons).

    modified files:
     Changelog xml/XML.py xml/parser.py


2005-04-07 18:10:23 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-57

    Summary:
      xhtml, fix i18n
    Revision:
      itools--main--0.8--patch-57


    modified files:
     Changelog xhtml/XHTML.py


2005-04-07 15:35:39 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-56

    Summary:
      html, fix load of comments, now the parser returns a list
    Revision:
      itools--main--0.8--patch-56


    modified files:
     Changelog html/HTML.py html/parser.py xml/parser.py
     xml/test_xsd.py


2005-04-05 14:43:16 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-55

    Summary:
      xml, change dublin core date to a datetime type
    Revision:
      itools--main--0.8--patch-55


    modified files:
     Changelog xml/DublinCore.py


2005-04-05 14:42:14 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-54

    Summary:
      handlers, add 'to_unicode' to some type coders
    Revision:
      itools--main--0.8--patch-54


    modified files:
     Changelog handlers/IO.py


2005-04-04 17:41:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-53

    Summary:
      documentation, update XML chapter
    Revision: