@@ -38,7 +38,8 @@ class HeadElement(Element):
     def to_unicode(self, encoding='UTF-8'):
         return ''.join([self.get_opentag(),
                         '\n    <meta http-equiv="Content-Type" content="text/html; charset=%s">' % encoding,
-                        XML.Children.encode(self.children, encoding=encoding),
+                        XML.Children.to_unicode(self.children,
+                                                encoding=encoding),
                         self.get_closetag()])
 
 
